Armature Visual Envelope Distance occluded by geometry [even if 'In Front' is enabled] #73115

Closed
opened 2020-01-14 12:22:44 +01:00 by Pedro · 7 comments

System Information
Operating system: macOS Sierra, Versión 10.12.6.
Graphics card: Intel Iris Graphics 6100 1536 MB.

Blender Version
Blender Version 2.81a (2.81a 2019-12-04)

Short description of error

Exact steps for others to reproduce the error

  1. File, New, General.
  2. Press A.
  3. Press X, Delete.
  4. Shift + A, Armature.
  5. Shift + A, Mesh, Plane.
  6. Press N, Transform, Rotation, 90º in X.
  7. Press 1 (View Front).
  8. Viewport, select Bone.
  9. Panel Object Data Properties, Viewport Display:
    9.1. Display As: Envelope.
    9.2. In Front: Off.
  10. Viewport, select Bone
  11. Edit Mode.

Blender 2.79b

2.79.png 2.79b, Look at the image, everything is fine here.

Blender 2.81a

2.81a.png

2.81a-2.png

2.81a, Look at the picture, how it should look. Same Blender 2.79b.

Captura de pantalla 2020-01-14 a las 13.23.16.png
View Front, no Ok.

Captura de pantalla 2020-01-14 a las 13.23.44.png
OK

Observation:
Follow the steps.
Note: If you want you can activate Viewport, Shading, MatCap, select clay_brown.exr.

**System Information** Operating system: macOS Sierra, Versión 10.12.6. Graphics card: Intel Iris Graphics 6100 1536 MB. **Blender Version** Blender Version 2.81a (2.81a 2019-12-04) **Short description of error** Exact steps for others to reproduce the error 1. File, New, General. 2. Press A. 3. Press X, Delete. 4. Shift + A, Armature. 5. Shift + A, Mesh, Plane. 6. Press N, Transform, Rotation, 90º in X. 7. Press 1 (View Front). 8. Viewport, select Bone. 9. Panel Object Data Properties, Viewport Display: 9.1. Display As: Envelope. 9.2. In Front: Off. 10. Viewport, select Bone 11. Edit Mode. Blender 2.79b ----------------- ![2.79.png](https://archive.blender.org/developer/F8277741/2.79.png) 2.79b, Look at the image, everything is fine here. Blender 2.81a ---------------- ![2.81a.png](https://archive.blender.org/developer/F8277743/2.81a.png) ![2.81a-2.png](https://archive.blender.org/developer/F8277768/2.81a-2.png) 2.81a, Look at the picture, how it should look. Same Blender 2.79b. ![Captura de pantalla 2020-01-14 a las 13.23.16.png](https://archive.blender.org/developer/F8277789/Captura_de_pantalla_2020-01-14_a_las_13.23.16.png) View Front, no Ok. ![Captura de pantalla 2020-01-14 a las 13.23.44.png](https://archive.blender.org/developer/F8277790/Captura_de_pantalla_2020-01-14_a_las_13.23.44.png) OK Observation: Follow the steps. Note: If you want you can activate Viewport, Shading, MatCap, select clay_brown.exr.
Author

Added subscriber: @Pedro.huarez

Added subscriber: @Pedro.huarez
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Whether the envelope should always draw in front might be debatable (after all the bone is occluded by geometry as well), but it certainly should if In Font is enabled, no?
[And yes, 2.79 never occluded the envelope (In Front did not matter here).]

Would confirm for now.

CC @Jeroen-Bakker

Whether the envelope should **always** draw in front might be debatable (after all the bone is occluded by geometry as well), but it certainly should if `In Font` is enabled, no? [And yes, 2.79 never occluded the envelope (`In Front` did not matter here).] Would confirm for now. CC @Jeroen-Bakker
Philipp Oeser changed title from Visual Envelope Distance Incomplete to Armature Visual Envelope Distance occluded by geometry [even if 'In Front' is enabled] 2020-01-14 13:05:20 +01:00
Author

Bone no occluded by geometry. half and half. It is right.
In Front: off.

Bone no occluded by geometry. half and half. It is right. In Front: off.
Jeroen Bakker self-assigned this 2020-05-18 09:49:32 +02:00

This issue was referenced by 0236863c6d

This issue was referenced by 0236863c6d66e8332bd06228e9a52d82d645daa0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73115
No description provided.